# pile-template-cpp

./: README.md
pile/: CMakeLists.txt  README.md  refcnt.cmake  refcnt.h  tempile-config.h.in  tempile-private.h  tempile.cc  tempile.cmake  tempile.h
pile-helpers/: CMakeLists.txt  LICENSE  README.md
pile-helpers/live-test/: CMakeLists.txt  main.cc
pile-helpers/tests/: CMakeLists.txt  basic.cc
